--- a/templates/get_users.html
+++ b/templates/get_users.html
@@ -45,9 +45,8 @@
 			<thead>
 				<tr>
 					<th>Id</th>
-					<th>Name</th>
-					<th>UOM</th>
-					<th>Actions</th>
+					<th>Username</th>
+					<th>E-mail</th>
 				</tr>
 			</thead>
 			<tbody>
