--- a/templates/base.html
+++ b/templates/base.html
@@ -28,22 +28,57 @@
 	</div>
 	
 	<div class="container" id="menu">
-		<a href="/users/(id)" class="btn btn-default">Get User</a> &nbsp; 
+		<a href="/users/{{id}}" class="btn btn-default">Get User</a> &nbsp; 
 		<a href="/users" class="btn btn-default">Get Users</a> &nbsp; 
-		<a href="/users" class="btn btn-default">Add User</a> &nbsp; 
-		<a href="/users/{id}" class="btn btn-default">Update User</a> &nbsp; 
-        <a href="/users/{id}" class="btn btn-default">Delete User</a> &nbsp;
 	</div>
-
-    <div class="form">
-        <form action="/" method="POST">
-            <input type="text" name="content" id="content">
-            <input type="submit" value="Add Task">
-        </form>
-	</div>
-
+	
 	<div>
 		&nbsp;
+	</div>
+	
+	<div class="container" id="listing">
+		<h3>Usuários</h3>
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Id</th>
+					<th>Username</th>
+					<th>E-mail</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>NU-CH-000001</td>
+					<td>Chocolate chip cookies</td>
+					<td>Pack</td>
+					<td>
+						<a href="/users/{{id}}" class="btn btn-default">Editar</a> &nbsp; 
+						<a href="/users/{{id}}" class="btn btn-default">Deletar</a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+	
+	<div class="container" id="new-entry">
+		<h3>Novo usuário</h3>
+		<form>
+			<div class="form-group">
+				<label class="inline-80">Id</label> &nbsp;
+				<input type="text" id="id" />
+			</div>
+			<div class="form-group">
+				<label class="inline-80">Username</label> &nbsp;
+				<input type="text" id="username" />
+			</div>
+			<div class="form-group">
+				<label class="inline-80">E-mail</label> &nbsp;
+				<input type="text" id="email" />
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Salvar" class="btn btn-primary" />
+			</div>
+		</form>
 	</div>
 	
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
