--- a/templates/get_users.html
+++ b/templates/get_users.html
@@ -28,11 +28,8 @@
 	</div>
 	
 	<div class="container" id="menu">
-		<a href="#" class="btn btn-default">Get User</a> &nbsp; 
-		<a href="#" class="btn btn-default">Get Users</a> &nbsp; 
-		<a href="#" class="btn btn-default">Add User</a> &nbsp; 
-		<a href="#" class="btn btn-default">Update User</a> &nbsp; 
-        <a href="#" class="btn btn-default">Delete User</a> &nbsp;
+		<a href="/users/{{id}}" class="btn btn-default">Get User</a> &nbsp; 
+		<a href="/users" class="btn btn-default">Get Users</a> &nbsp; 
 	</div>
 	
 	<div>
@@ -40,29 +37,49 @@
 	</div>
 	
 	<div class="container" id="listing">
-		<h3>Listing</h3>
+		<h3>Usuários</h3>
 		<table class="table table-striped">
 			<thead>
 				<tr>
-					<th>Id</th>
 					<th>Username</th>
 					<th>E-mail</th>
 				</tr>
 			</thead>
 			<tbody>
+				{% for user in users %}
 				<tr>
-					<td>NU-CH-000001</td>
-					<td>Chocolate chip cookies</td>
-					<td>Pack</td>
+					<td>{{ user.username }}</td>
+					<td>{{ user.email }}</td>
 					<td>
-						<a href="#" class="btn btn-default">Edit</a> &nbsp; 
-						<a href="#" class="btn btn-default">Default</a>
+						<a href="/users/{{id}}" class="btn btn-default">Editar</a> &nbsp; 
+						<a href="/users/{{id}}" class="btn btn-default">Deletar</a>
 					</td>
 				</tr>
+				{% endfor %}
 			</tbody>
 		</table>
 	</div>
 	
+	<div class="container" id="new-entry">
+		<h3>Novo usuário</h3>
+		<form>
+			<div class="form-group">
+				<label class="inline-80">Id</label> &nbsp;
+				<input type="text" id="id" />
+			</div>
+			<div class="form-group">
+				<label class="inline-80">Username</label> &nbsp;
+				<input type="text" id="username" />
+			</div>
+			<div class="form-group">
+				<label class="inline-80">E-mail</label> &nbsp;
+				<input type="text" id="email" />
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Salvar" class="btn btn-primary" />
+			</div>
+		</form>
+	</div>
 	
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
