--- a/templates/base.html
+++ b/templates/base.html
@@ -28,8 +28,8 @@
 	</div>
 	
 	<div class="container" id="menu">
-		<a href="/users/{{id}}" class="btn btn-default">Get User</a> &nbsp; 
-		<a href="/users" class="btn btn-default">Get Users</a> &nbsp; 
+		<a href="/get/users/{{id}}" class="btn btn-default">Get User</a> &nbsp; 
+		<a href="/get/users" class="btn btn-default">Get Users</a> &nbsp; 
 	</div>
 	
 	<div>
@@ -38,7 +38,7 @@
 	
 	<div class="container" id="new-entry">
 		<h3>Novo usuário</h3>
-		<form action="/users" method="POST">
+		<form action="/post/users" method="POST">
 			</div>
 			<div class="form-group">
 				<label class="inline-80">Username</label> &nbsp;
