--- a/templates/get_users.html
+++ b/templates/get_users.html
@@ -28,8 +28,7 @@
 	</div>
 	
 	<div class="container" id="menu">
-		<a href="/users/{{id}}" class="btn btn-default">Get User</a> &nbsp; 
-		<a href="/users" class="btn btn-default">Get Users</a> &nbsp; 
+		<a href="/" class="btn btn-default">Voltar</a> &nbsp; 
 	</div>
 	
 	<div>
@@ -51,8 +50,8 @@
 					<td>{{ user.username }}</td>
 					<td>{{ user.email }}</td>
 					<td>
-						<a href="/users/{{id}}" class="btn btn-default">Editar</a> &nbsp; 
-						<a href="/users/{{id}}" class="btn btn-default">Deletar</a>
+						<a href="/put/users/{{user.id}}" class="btn btn-default">Editar</a> &nbsp; 
+						<a href="/delete/users/{{user.id}}" class="btn btn-default">Deletar</a>
 					</td>
 				</tr>
 				{% endfor %}
@@ -62,18 +61,15 @@
 	
 	<div class="container" id="new-entry">
 		<h3>Novo usuário</h3>
-		<form>
-			<div class="form-group">
-				<label class="inline-80">Id</label> &nbsp;
-				<input type="text" id="id" />
+		<form action="/post/users" method="POST">
 			</div>
 			<div class="form-group">
 				<label class="inline-80">Username</label> &nbsp;
-				<input type="text" id="username" />
+				<input type="text" name="username" id="username" />
 			</div>
 			<div class="form-group">
 				<label class="inline-80">E-mail</label> &nbsp;
-				<input type="text" id="email" />
+				<input type="text" name="email" id="email" />
 			</div>
 			<div class="form-group">
 				<input type="submit" value="Salvar" class="btn btn-primary" />
