--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	
-	<title>Macs R Poo</title>
+	<title>Picpay</title>
 	
 	<style>
 	.inline-80 {
@@ -28,7 +28,7 @@
 	</div>
 	
 	<div class="container" id="menu">
-		<a href="/get/users" class="btn btn-default">Get Users</a> &nbsp; 
+		<a href="{{ url_for('users.get_users') }}" class="btn btn-default">Get Users</a> &nbsp; 
 	</div>
 	
 	<div>
@@ -37,7 +37,7 @@
 	
 	<div class="container" id="new-entry">
 		<h3>Novo usuário</h3>
-		<form action="/post/users" method="POST">
+		<form action="/users" method="POST">
 			</div>
 			<div class="form-group">
 				<label class="inline-80">Username</label> &nbsp;
