--- a/templates/update.html
+++ b/templates/update.html
@@ -8,9 +8,9 @@
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	
+
 	<title>Picpay</title>
-	
+
 	<style>
 	.inline-80 {
 		display: inline-block; 
@@ -26,7 +26,7 @@
 	<div>
 		&nbsp;
 	</div>
-	
+
 	<div class="container" id="menu">
 		<a href="/users" class="btn btn-default">Voltar</a> &nbsp; 
 	</div>
@@ -35,50 +35,24 @@
 		&nbsp;
 	</div>
 	
-	<div class="container" id="listing">
-		<h3>Usuários</h3>
-		<table class="table table-striped">
-			<thead>
-				<tr>
-					<th>Username</th>
-					<th>E-mail</th>
-					<th>Data de criação</th>
-					<th>Data de atualização</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>{{ user.username }}</td>
-					<td>{{ user.email }}</td>
-					<td>{{ user.created_date }}</td>
-					<td>{{ user.updated_date }}</td>
-					<td>
-						<a href="/users" class="btn btn-default">Editar</a> &nbsp;
-						<a href="/users" class="btn btn-default">Deletar</a>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-	
-	<div class="container" id="new-entry">
-		<h3>Novo usuário</h3>
-		<form action="{{ url_for('users.add_user')}}" method="POST">
+	<div class="container" id="edit-entry">
+		<h3>Editar usuário</h3>
+		<form action="/users" method="PUT">
 			</div>
 			<div class="form-group">
 				<label class="inline-80">Username</label> &nbsp;
-				<input type="text" name="username" id="username" />
+				<input type="text" name="username" id="username" value="{{user.username}}"/>
 			</div>
 			<div class="form-group">
 				<label class="inline-80">E-mail</label> &nbsp;
-				<input type="text" name="email" id="email" />
+				<input type="text" name="email" id="email" value="{{user.email}}"/>
 			</div>
 			<div class="form-group">
-				<input type="submit" value="Salvar" class="btn btn-primary" />
+				<input type="submit" value="Atualizar" class="btn btn-primary" />
 			</div>
 		</form>
 	</div>
-	
+
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
