--- a/templates/get_user.html
+++ b/templates/get_user.html
@@ -53,8 +53,8 @@
 					<td>{{ user.created_date }}</td>
 					<td>{{ user.updated_date }}</td>
 					<td>
-						<a href="/users" class="btn btn-default">Editar</a> &nbsp;
-						<a href="/users" class="btn btn-default">Deletar</a>
+						<a href="{{ url_for('users.update_user',id=user.id) }}" class="btn btn-default">Editar</a> &nbsp;
+						<a href="{{ url_for('users.delete_user',id=user.id) }}" class="btn btn-default">Deletar</a>
 					</td>
 				</tr>
 			</tbody>
