--- a/templates/get_users.html
+++ b/templates/get_users.html
@@ -23,6 +23,33 @@
 		&nbsp;
 	</div>
 
+	<script>
+		function deleteUser(userId) {
+			const endpoint = `http://localhost:5000/users/${userId}`; // Endpoint para deletar o usuário
+
+			fetch(endpoint, {
+				method: 'DELETE', // Define o método HTTP como DELETE
+			})
+			.then(response => {
+				if (response.redirected) {
+					// Verifica se houve redirecionamento
+					window.location.reload(); // Redireciona para a URL retornada
+				} else if (response.ok) {
+					// Resposta OK (200-299)
+					alert('Usuário deletado com sucesso!');
+					window.location.reload();
+				} else {
+					// Resposta com erro
+					throw new Error('Erro ao deletar o usuário.');
+				}
+			})
+			.catch(error => {
+				console.error('Erro:', error);
+				alert('Houve um problema ao tentar deletar o usuário.');
+			});
+		}
+	</script>
+
 	<div>
 		&nbsp;
 	</div>
@@ -52,8 +79,7 @@
 					<td>
 						<a href="{{ url_for('users.update_user',id=user.id) }}" class="btn btn-default">Editar</a> &nbsp;
 						<a href="{{ url_for('users.get_user',id=user.id) }}" class="btn btn-default">Detalhes</a> &nbsp; 
-						<a href="#" class="btn btn-default">Deletar</a>
-						<a href="#" class="btn btn-default" onclick="deleteUser({{ user.id }})">Deletar</a>
+						<a href="#" onclick="deleteUser({{ user.id }})" class="btn btn-default">Deletar</a>
 					</td>
 				</tr>
 				{% endfor %}
