--- a/templates/base.html
+++ b/templates/base.html
@@ -23,16 +23,64 @@
 		&nbsp;
 	</div>
 
+	<script>
+		function deleteUser(userId) {
+			const endpoint = `http://localhost:5000/users/${userId}`; // Endpoint para deletar o usuário
+
+			fetch(endpoint, {
+				method: 'DELETE', // Define o método HTTP como DELETE
+			})
+			.then(response => {
+				if (response.redirected) {
+					// Verifica se houve redirecionamento
+					window.location.reload(); // Redireciona para a URL retornada
+				} else if (response.ok) {
+					// Resposta OK (200-299)
+					alert('Usuário deletado com sucesso!');
+					window.location.reload();
+				} else {
+					// Resposta com erro
+					throw new Error('Erro ao deletar o usuário.');
+				}
+			})
+			.catch(error => {
+				console.error('Erro:', error);
+				alert('Houve um problema ao tentar deletar o usuário.');
+			});
+		}
+	</script>
+
 	<div>
 		&nbsp;
 	</div>
 	
-	<div class="container" id="menu">
-		<a href="{{ url_for('users.get_users') }}" class="btn btn-default">Get Users</a> &nbsp; 
-	</div>
-	
 	<div>
 		&nbsp;
+	</div>
+	
+	<div class="container" id="listing">
+		<h3>Usuários</h3>
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Username</th>
+					<th>E-mail</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for user in users %}
+				<tr>
+					<td>{{ user.username }}</td>
+					<td>{{ user.email }}</td>
+					<td>
+						<a href="#" onclick="editUser({{ user.id }})" class="btn btn-default">Editar</a> &nbsp;
+						<a href="#" onclick="detailsUser({{ user.id }})" class="btn btn-default">Detalhes</a> &nbsp; 
+						<a href="#" onclick="deleteUser({{ user.id }})" class="btn btn-default">Deletar</a>
+					</td>
+				</tr>
+				{% endfor %}
+			</tbody>
+		</table>
 	</div>
 	
 	<div class="container" id="new-entry">
